# redhat-opentelemetry-python-contrib

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pr.yaml  pypi.yaml
redhat_opentelemetry_contrib/: __init__.py  __version__.py  file_exporters.py  script_instrumentor.py
tests/: test_dummy.py  test_file_exporters.py  test_script_instrumentor.py
